--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
+<!--    允许网络通信-->
     <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
             android:allowBackup="true"
@@ -47,14 +49,9 @@
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.ChatRoom2"/>
-
-        <service
-                android:name=".firebase.MessagingService"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
+        <meta-data
+                android:name="com.google.android.gms.ads.AD_MANAGER_APP"
+                android:value="true" />
     </application>
 
 </manifest>
