--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
-
-<!--    允许网络通信-->
+    <!-- 允许网络通信 -->
     <uses-permission android:name="android.permission.INTERNET"/>
-
 
     <application
             android:allowBackup="true"
@@ -16,6 +14,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.ChatRoom2"
             tools:targetApi="31">
+        <activity
+                android:name=".activities.ChatRoomActivity"
+                android:exported="false"/>
         <activity
                 android:name=".activities.AboutUsActivity"
                 android:exported="false"/>
@@ -49,9 +50,10 @@
                 android:exported="true"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.ChatRoom2"/>
+
         <meta-data
                 android:name="com.google.android.gms.ads.AD_MANAGER_APP"
-                android:value="true" />
+                android:value="true"/>
     </application>
 
 </manifest>
