--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
     <!-- 允许网络通信 -->
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature
+            android:name="android.hardware.camera"
+            android:required="false"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/> <!-- 必要权限 -->
+    <uses-permission android:name="android.permission.INTERNET"/> <!-- 可选权限 -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission
+            android:name="android.permission.BLUETOOTH"/> <!-- 对于 Android 12.0 及以上且集成 v4.1.0 以下 SDK 的设备，还需要添加以下权限 -->
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/> <!-- 对于 Android 12.0 及以上设备，还需要添加以下权限 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
 
     <application
             android:allowBackup="true"
@@ -16,6 +30,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.ChatRoom2"
             tools:targetApi="31">
+        <activity
+                android:name=".activities.SignInActivity"
+                android:exported="false"/>
         <activity
                 android:name=".activities.VideoChatActivity"
                 android:exported="false"/>
@@ -41,7 +58,7 @@
                 android:exported="false"
                 android:windowSoftInputMode="adjustResize"/>
         <activity
-                android:name=".activities.SignInActivity"
+                android:name=".activities.WelcomeActivity"
                 android:exported="true"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -60,23 +77,5 @@
                 android:name="com.google.android.gms.ads.AD_MANAGER_APP"
                 android:value="true"/>
     </application>
-
-    <!--必要权限-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!--可选权限-->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <!-- 对于 Android 12.0 及以上且集成 v4.1.0 以下 SDK 的设备，还需要添加以下权限 -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
-    <!-- 对于 Android 12.0 及以上设备，还需要添加以下权限 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
-
-
 
 </manifest>
