--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:18.1.0'
 
     implementation 'io.agora.rtc:full-sdk:4.3.0'
+    implementation 'io.github.youth5201314:banner:2.2.2'
 
     //implementation 'com.google.firebase:firebase-messaging:23.1.0'
     testImplementation 'junit:junit:4.13.2'
